--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,10 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: gt.qmd
+        text: "Beautiful tables"
+      - href: gtsummary.qmd
+        text: "Beautiful tables for models"
 
 format:
   html:
